Fixed up footer covering stuff

--- a/static/styles.scss
+++ b/static/styles.scss
@@ -6,6 +6,14 @@ $tedx-color: #e62b1e;
     margin-left: auto;
     margin-right: auto;
     margin-top: 4%;
+    margin-bottom: 8%;
+    border: $tedx-color 1px solid;
+    th {
+        background-color: $tedx-color;
+    }
+    td, th {
+        border: $tedx-color 1px solid;
+    }
 }
 #tedx {
     color: $tedx-color;
@@ -38,6 +46,9 @@ h1 {
     h5 {
         font-family: 'Times New Roman', Times, serif
     }
+}
+.content {
+    margin-bottom: 4%
 }
 .footer {
     position: fixed;
